--- a/爬虫项目/2.Scrapy爬取链家二手房信息/2/lianjia3_django/templates/table.html
+++ b/爬虫项目/2.Scrapy爬取链家二手房信息/2/lianjia3_django/templates/table.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>二手房信息</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+   <script src="{% static 'jquery-3.3.1/jquery-3.3.1.min.js' %}"></script>
+   <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
       <ol class="breadcrumb my-4">
         <li class="breadcrumb-item active">二手房信息</li>
       </ol>
@@ -16,7 +18,7 @@
           <tr>
             <th>id</th>
             <th>totalPrice</th>
-{#            <th>title</th>#}
+            <th>title</th>
             <th>houseType</th>
             <th>constructionArea</th>
             <th>unitPrice</th>
@@ -26,20 +28,20 @@
             <th>buildingtype</th>
             <th>hasElevator</th>
             <th>decorationType</th>
-            <th>yearOfRight</th>
-            <th>buildyear</th>
-            <th>useful</th>
-            <th>lastSell</th>
-            <th>last30DayLead</th>
-            <th>attention</th>
+{#            <th>yearOfRight</th>#}
+{#            <th>buildyear</th>#}
+{#            <th>useful</th>#}
+{#            <th>lastSell</th>#}
+{#            <th>last30DayLead</th>#}
+{#            <th>attention</th>#}
           </tr>
         </thead>
         <tbody>
-          {% for item in list %}
+          {% for item in lists %}
                 <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ item.totalPrice }}</td>
-{#                    <td>{{ item.title }}</td>#}
+                    <td>{{ item.title }}</td>
                     <td>{{ item.houseType }}</td>
                     <td>{{ item.constructionArea }}</td>
                     <td>{{ item.unitPrice }}</td>
@@ -47,18 +49,39 @@
                     <td>{{ item.toward }}</td>
                     <td>{{ item.floor }}</td>
                     <td>{{ item.buildingtype }}</td>
-                    <td>{{ forloop.hasElevator }}</td>
+                    <td>{{ item.hasElevator }}</td>
                     <td>{{ item.decorationType }}</td>
-                    <td>{{ item.yearOfRight }}</td>
-                    <td>{{ item.buildyear }}</td>
-                    <td>{{ item.useful }}</td>
-                    <td>{{ item.lastSell }}</td>
-                    <td>{{ item.last30DayLead }}</td>
-                    <td>{{ item.attention }}</td>
+{#                    <td>{{ item.yearOfRight }}</td>#}
+{#                    <td>{{ item.buildyear }}</td>#}
+{#                    <td>{{ item.useful }}</td>#}
+{#                    <td>{{ item.lastSell }}</td>#}
+{#                    <td>{{ item.last30DayLead }}</td>#}
+{#                    <td>{{ item.attention }}</td>#}
                 </tr>
           {% endfor %}
         </tbody>
       </table>
+{#<p>#}
+  {# topics.paginator.page_range 这个函数返回包含一个所有页码数的 range 对象 #}
+  {# 即 range(1, topics.paginator.num_pages + 1) #}
+{#  {% for page_number in lists.paginator.page_range %}#}
+{#    {% ifequal page_number  topics.number %}#}
+{#      {{ page_number }}#}
+{#    {% else %}#}
+{#      <a href="?page={{ page_number }}">{{ page_number }}</a>#}
+{#    {% endifequal %}#}
+{#  {% endfor %}#}
+{#</p>#}
+<p>
+{% if lists.has_previous %}
+  <a href="?page={{ lists.previous_page_number }}">Previous</a>
+  {% endif %}
+  {# topics.paginator.number_pages 返回总页数 #}
+  Page {{ lists.number }} of {{ lists.paginator.num_pages }}.
+{% if lists.has_next %}
+  <a href="?page={{ lists.next_page_number }}">Next</a>
+{% endif %}
+</p>
     </div>
 </body>
 </html>
